--- a/ArchitectureQuiz.html
+++ b/ArchitectureQuiz.html
@@ -2,9 +2,167 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
+    <meta name = "viewport" content = "width = device - width, initial-scale = 1.0">
+    <title>Architecture Quiz</title>
+
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
+<h1 id="title2"><span>Architecture Quiz!</span></h1>
+
+<h3>1. What is the primary purpose of an architectural blueprint?</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="radio" id="q1a1" name="question1" value="question1">
+        <label for="q1a1">To showcase the building's aesthetic appeal</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q1a2" name="question1" value="question1">
+        <label for="q1a2">To provide detailed construction instructions</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q1a3" name="question1" value="question1">
+        <label for="q1a3">To display the interior decoration plans</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q1a4" name="question1" value="question1">
+        <label for="q1a4">To indicate landscape design</label>
+    </div><br>
+
+</form>
+
+
+
+<h3>2. What does the term 'section' refer to in architectural drawings?</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="radio" id="q2a1" name="question2" value="question 2">
+        <label for="q2a1">A top-down view of the building</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q2a2" name="question2" value="question 2">
+        <label for="q2a2">A view showing a cut through the building to reveal interior spaces</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q2a3" name="question2" value="question2">
+        <label for="q2a3">The layout of the landscape around the building</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q2a4" name="question2" value="Pacific">
+        <label for="q2a4">The arrangement of furniture in the building</label>
+    </div><br>
+
+</form>
+
+<h3>3. Which scale is most commonly used in architectural drawings for buildings?</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="radio" id="q3a1" name="question3" value="question3">
+        <label for="q3a1">1:100</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q3a2" name="question3" value="question3">
+        <label for="q3a2">1:50</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q3a3" name="question3" value="question3">
+        <label for="q3a3">1:1000</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q3a4" name="question3" value="question3">
+        <label for="q3a4">1:200</label>
+    </div><br>
+
+
+</form>
+
+<h3>4. In architectural design, what does 'R-value' refer to?</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="radio" id="q4a1" name="question4" value="question4">
+        <label for="q4a1">Resistance to electrical current</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q4a2" name="question4" value="question4">
+        <label for="q4a2">Thermal insulation efficiency</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q4a3" name="question4" value="question4">
+        <label for="q4a3">Structural load-bearing capacity</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q4a4" name="question4" value="question4">
+        <label for="q4a4">Water resistance of materials</label>
+    </div><br>
+
+</form>
+
+<h3>5. Which of the following are typical components found in an architectural floor plan? (Select two)</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="checkbox" id="q6a1" name="question5" value="question5">
+        <label for="q6a1">Walls and doors</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q6a2" name="question5" value="question5">
+        <label for="q6a2">Electrical wiring</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q6a3" name="question5" value="question5">
+        <label for="q6a3">Structural beams</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q6a4" name="question5" value="question5">
+        <label for="q6a4">Windows and furniture layout</label>
+    </div><br>
+
+</form>
+
+<h3>6. Which of the following are types of architectural drawings? (Select two)</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="checkbox" id="q7a1" name="question6" value="question6">
+        <label for="q7a1">Elevation</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q7a2" name="question6" value="question6">
+        <label for="q7a2">Cross-section</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q7a3" name="question6" value="question6">
+        <label for="q7a3">Blueprint legend</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q7a4" name="question6" value="question6">
+        <label for="q7a4">Perspective projection</label>
+    </div><br>
+</form>
+
+<form action="CongratulationPage.html">
+    <button>Submit</button>
+</form>
+
+
+<script src="script.js"></script>
 </body>
 </html>
