--- a/GeographyQuiz.html
+++ b/GeographyQuiz.html
@@ -2,9 +2,189 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
+    <meta name = "viewport" content = "width = device - width, initial-scale = 1.0">
+    <title>Geography Quiz</title>
+
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
+<h1 id="title2"><span>Geography Quiz!</span></h1>
+
+<h3>1. What is the capital city of Japan?</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="radio" id="q1a1" name="question1" value="Kyoto">
+        <label for="q1a1">Kyoto</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q1a2" name="question1" value="Osaka">
+        <label for="q1a2">Osaka</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q1a3" name="question1" value="Tokyo">
+        <label for="q1a3">Tokyo</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q1a4" name="question1" value="Hiroshima">
+        <label for="q1a4">Hiroshima</label>
+    </div><br>
+
+</form>
+
+<h3>2. Which ocean is the largest by surface area?</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="radio" id="q2a1" name="question2" value="Atlantic">
+        <label for="q2a1">Atlantic Ocean</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q2a2" name="question2" value="Indian">
+        <label for="q2a2">Indian Ocean</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q2a3" name="question2" value="Southern">
+        <label for="q2a3">Southern Ocean</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q2a4" name="question2" value="Pacific">
+        <label for="q2a4">Pacific Ocean</label>
+    </div><br>
+
+</form>
+
+<h3>3. Which country has the most natural lakes?</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="radio" id="q3a1" name="question3" value="Canada">
+        <label for="q3a1">Canada</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q3a2" name="question3" value="Brazil">
+        <label for="q3a2">Brazil</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q3a3" name="question3" value="India">
+        <label for="q3a3">India</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q3a4" name="question3" value="Russia">
+        <label for="q3a4">Russia</label>
+    </div><br>
+
+
+</form>
+
+<h3>4. Which continent is the driest?</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="radio" id="q4a1" name="question4" value="Africa">
+        <label for="q4a1">Africa</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q4a2" name="question4" value="Antarctica">
+        <label for="q4a2">Antarctica</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q4a3" name="question4" value="Australia">
+        <label for="q4a3">Australia</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q4a4" name="question4" value="South America">
+        <label for="q4a4">South America</label>
+    </div><br>
+
+</form>
+
+<h3>5. Which country shares the longest land border with the United States?</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="radio" id="q5a1" name="question5" value="Mexico">
+        <label for="q5a1">Mexico</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q5a2" name="question5" value="Canada">
+        <label for="q5a2">Canada</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q5a3" name="question5" value="Russia">
+        <label for="q5a3">Russia</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q5a4" name="question5" value="Greenland">
+        <label for="q5a4">Greenland</label>
+    </div><br>
+
+</form>
+
+<h3>6. Which of the following countries are landlocked? (Select two)</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="checkbox" id="q6a1" name="question6" value="Switzerland">
+        <label for="q6a1">Switzerland</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q6a2" name="question6" value="Argentina">
+        <label for="q6a2">Argentina</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q6a3" name="question6" value="Nepal">
+        <label for="q6a3">Nepal</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q6a4" name="question6" value="Thailand">
+        <label for="q6a4">Thailand</label>
+    </div><br>
+
+</form>
+
+<h3>7. Which of the following are part of the United Kingdom? (Select two)</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="checkbox" id="q7a1" name="question7" value="England">
+        <label for="q7a1">England</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q7a2" name="question7" value="Ireland">
+        <label for="q7a2">Ireland</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q7a3" name="question7" value="Wales">
+        <label for="q7a3">Wales</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q7a4" name="question7" value="Iceland">
+        <label for="q7a4">Iceland</label>
+    </div><br>
+</form>
+
+<form action="CongratulationPage.html">
+    <button>Submit</button>
+</form>
+
+
+<script src="script.js"></script>
 </body>
 </html>
