--- a/PhysicsQuiz.html
+++ b/PhysicsQuiz.html
@@ -2,9 +2,167 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
+    <meta name = "viewport" content = "width = device - width, initial-scale = 1.0">
+    <title>Geography Quiz</title>
+
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
+<h1 id="title2"><span>Physics Quiz!</span></h1>
+
+<h3>1. What is the speed of light in a vacuum?</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="radio" id="q1a1" name="question1" value="question1">
+        <label for="q1a1">300,000 km/s</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q1a2" name="question1" value="question1">
+        <label for="q1a2">150,000 km/s</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q1a3" name="question1" value="question1">
+        <label for="q1a3">450,000 km/s</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q1a4" name="question1" value="question1">
+        <label for="q1a4">600,000 km/s</label>
+    </div><br>
+
+</form>
+
+
+
+<h3>2. Which of the following is Newton's third law of motion?</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="radio" id="q2a1" name="question2" value="question 2">
+        <label for="q2a1">Force equals mass times acceleration</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q2a2" name="question2" value="question 2">
+        <label for="q2a2">An object in motion stays in motion unless acted on by an external force</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q2a3" name="question2" value="question2">
+        <label for="q2a3">Every action has an equal and opposite reaction</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q2a4" name="question2" value="Pacific">
+        <label for="q2a4">Energy cannot be created or destroyed</label>
+    </div><br>
+
+</form>
+
+<h3>3. What is the unit of electric current?</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="radio" id="q3a1" name="question3" value="question3">
+        <label for="q3a1">Volt</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q3a2" name="question3" value="question3">
+        <label for="q3a2">Ampere</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q3a3" name="question3" value="question3">
+        <label for="q3a3">Ohm</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q3a4" name="question3" value="question3">
+        <label for="q3a4">Joule</label>
+    </div><br>
+
+
+</form>
+
+<h3>4. Which of the following is not a scalar quantity?</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="radio" id="q4a1" name="question4" value="question4">
+        <label for="q4a1">Temperature</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q4a2" name="question4" value="question4">
+        <label for="q4a2">Speed</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q4a3" name="question4" value="question4">
+        <label for="q4a3">Energy</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="radio" id="q4a4" name="question4" value="question4">
+        <label for="q4a4">South America</label>
+    </div><br>
+
+</form>
+
+<h3>5. Which of the following are fundamental forces in nature? (Select two)</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="checkbox" id="q6a1" name="question5" value="question5">
+        <label for="q6a1">Gravitational Force</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q6a2" name="question5" value="question5">
+        <label for="q6a2">Frictional Force</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q6a3" name="question5" value="question5">
+        <label for="q6a3">Electromagnetic Force</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q6a4" name="question5" value="question5">
+        <label for="q6a4">Tension Force</label>
+    </div><br>
+
+</form>
+
+<h3>6. Which of the following materials are conductors of electricity? (Select two)</h3>
+<form class="quiz-question">
+    <div class="selectOption">
+        <input type="checkbox" id="q7a1" name="question6" value="question6">
+        <label for="q7a1">Copper</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q7a2" name="question6" value="question6">
+        <label for="q7a2">Rubber</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q7a3" name="question6" value="question6">
+        <label for="q7a3">Aluminum</label>
+    </div><br>
+
+    <div class="selectOption">
+        <input type="checkbox" id="q7a4" name="question6" value="question6">
+        <label for="q7a4">Wood</label>
+    </div><br>
+</form>
+
+<form action="CongratulationPage.html">
+    <button>Submit</button>
+</form>
+
+
+<script src="script.js"></script>
 </body>
 </html>
