--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <h2><span>Pick your subject:</span></h2>
 
 <div class="selection">
-    <form class="geography">
+    <form method="POST" action="GeographyQuiz.html">
         <div class="geographyCard">
             <img id="geographyImage" src="GeographyImage.png" alt="Geography Image"><br>
 
@@ -59,7 +59,7 @@
         </div><br>
     </form>
 
-    <form class="physics_card">
+    <form class="physics_card" method="POST" action="PhysicsQuiz.html">
         <div class="physicsCard">
             <img id="physicsImage" src="PhysicsImage.png" alt="Physics Image"><br>
 
@@ -89,9 +89,9 @@
         </div><br>
     </form>
 
-    <form class="architecture_card">
+    <form class="architecture_card" method="POST" action="ArchitectureQuiz.html">
         <div class="architectureCard">
-            <img id="architectureImage" src="Minecraft.png" alt="Architecture Image">
+            <img id="architectureImage" src="architecture.png" alt="Architecture Image">
 
             <label for="fullName3"></label>
             <input type="text"
@@ -127,7 +127,7 @@
         <p>Copyright &copy; 2024 by Iustin Herciu | All Rights Reserved.</p>
     </div>
     <div class = "footer-iconTop">
-        <a href = ""><i class='bx bx-up-arrow-alt'></i></a>
+        <a href = ""><i class='bx bx-u p-arrow-alt'></i></a>
     </div>
 </footer>
 
